Demo application 20190807 (#24)
* Guest login

* Basic code evaluations.
