# mule-shell-server/main-java/net/sf/zoftwhere/mule/jpa/AccountRoleLocator.java
@@ -7,7 +7,9 @@ import net.sf.zoftwhere.mule.model.RoleModel;
 import org.hibernate.Session;
 import org.hibernate.query.Query;
 
+import java.util.ArrayList;
 import java.util.List;
+import java.util.Optional;
 import java.util.UUID;
 import java.util.function.Function;
 
@@ -18,49 +20,44 @@ public class AccountRoleLocator extends AbstractLocator<AccountRole, UUID> {
 		super(sessionProvider);
 	}
 
-	public AccountRole getByIdId(Account account, Role role) {
+	public Optional<AccountRole> getByIdId(Account account, Role role) {
 		Function<Query<AccountRole>, AccountRole> parameter;
 		parameter = query -> query
 				.setParameter("accountId", account.getId())
 				.setParameter("roleId", role.getId())
 				.getSingleResult();
-		return tryFetchNamedQuery("byIdId", parameter).orElse(null);
+		return tryFetchNamedQuery("byIdId", parameter);
 	}
 
 	public List<AccountRole> getForAccount(Account account) {
 		Function<Query<AccountRole>, Query<AccountRole>> parameter;
 		parameter = query -> query.setParameter("accountId", account.getId());
-		return tryFetchResult("byAccountId", parameter, AccountRole.class).orElse(null);
-
+		return tryFetchResult("byAccountId", parameter, AccountRole.class).orElse(new ArrayList<>());
 	}
 
-	public AccountRole getByRoleName(final Account account, final RoleModel role) {
+	public Optional<AccountRole> getByRoleName(final Account account, final RoleModel role) {
 		final var roleName = role.name();
 		Function<Query<AccountRole>, AccountRole> parameter;
 		parameter = query -> query
 				.setParameter("accountId", account.getId())
 				.setParameter("roleName", roleName)
 				.getSingleResult();
-		return tryFetchNamedQuery("byAccountAndRoleName", parameter).orElse(null);
+		return tryFetchNamedQuery("byAccountAndRoleName", parameter);
 	}
 
-	public AccountRole getByKey(final Account account, final RoleModel role) {
+	public Optional<AccountRole> getByKey(final Account account, final RoleModel role) {
 		final var packageName = role.getClass().getPackage().getName();
 		final var enumName = role.name();
 		final var key = packageName + ":" + enumName;
 		return getByKey(account, key);
 	}
 
-	public AccountRole getByKey(final Account account, final String key) {
+	public Optional<AccountRole> getByKey(final Account account, final String key) {
 		Function<Query<AccountRole>, AccountRole> parameter;
 		parameter = query -> query
 				.setParameter("accountId", account.getId())
 				.setParameter("key", key)
 				.getSingleResult();
-		return tryFetchNamedQuery("byAccountAndKey", parameter).orElse(null);
-	}
-
-	void persistCollection(ShellSession session) {
-		currentSession().persist(session);
+		return tryFetchNamedQuery("byAccountAndKey", parameter);
 	}
 }
